Modified main.js && added top image && added all hbs files

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='dist/css/style.min.css' />
     <link rel='stylesheet' href='components/bootstrap/dist/css/bootstrap.min.css' />
+    <link rel='stylesheet' href='dist/css/style.min.css'/>
   </head>
   <body>
+    {{> header }}
     {{{body}}}
+    {{> footer }}
     <script type="text/javascript" src="dist/script/script.min.js"></script>
   </body>
 </html>
