--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,209 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/madrid.JPG" alt="Card image cap" width="200px">
+    <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 90$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">359$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body text-center">
+      <h5 class="card-title">Madrid</h5>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="images/new_york.JPG" alt="Card image cap" width="180px">
+    <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 75$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">729$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body text-center">
+      <h5 class="card-title">New York</h5>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="images/tokyo.JPG" alt="Card image cap" width="200px">
+    <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 35$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">519$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body text-center">
+      <h5 class="card-title">Tokyo</h5>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck">
+    <div class="card">
+        <img class="card-img-top" src="images/ciudad_mexico.JPG" alt="Card image cap" width="200px">
+        <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 65$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">329$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+        <div class="card-body text-center">
+            <h5 class="card-title">Ciudad de Mexico</h5>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="images/buenos_aires.JPG" alt="Card image cap" width="200px">
+        <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 95$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">199$</div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="card-body text-center">
+            <h5 class="card-title">Buenos Aires</h5>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="images/beijing.JPG" alt="Card image cap" width="200px">
+        <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 50$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">659$</div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="card-body text-center">
+            <h5 class="card-title">Beijing</h5>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 imageWho">
+            <div class="row">
+                <div class="col-1 offset-6">
+                    <div class="quienesSomos card" style="width: 25rem;">
+                        <div class="card-body">
+                            <h5 class="titleQS card-title">QUIENES SOMOS</h5>
+                            <p class="textQS card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros 
+                                entusiastas que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios hemos
+                                diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica y Asia. Nuestro objetivo
+                                ahora es ir ampliando nuevos horizontes poco a poco.</p>
+                            <a href="#" class="btn btn-primary btn-lg">Descubrir</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid map">
+    <div class="row">
+        <div class="col-2">
+        </div>
+        <div class="col-4">
+            <div id="mapGoogle">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.4502350400226!2d-0.3581286847340404!3d39.48174697948473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604898947abad3%3A0x5aae0e0b7fa0358a!2sGeeksHubs+Space+Valencia!5e0!3m2!1ses!2ses!4v1527775812312" width="350" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="col-1">
+        </div>
+        <div class="col-4">
+            <div class="column textDescrip">
+                <div class="textDB">
+                    <div>E: enquiry@artiotravel.com</div>
+                    <div>P: 0264 123 4567</div>
+                </div>
+                <div class="textDB">
+                    <div>Give us a call or drop by anytime, we endeavour to
+                    answer all enquires within 24 hours on business days.
+                </div>
+                </div>
+                
+                <div class="textDB">
+                    <div>We are open from 8:30 AM - 4:00 PM week days.</div>
+                </div>
+
+                <div class="textDB"></div>
+
+                <form>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <input type="text" class="form-control" id="inputEmail4" placeholder="Name*">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <input type="email" class="form-control" id="inputPassword4" placeholder="Email*">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <input type="text" class="form-control" id="inputEmail4" placeholder="Phone">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <input type="text" class="form-control" id="inputPassword4" placeholder="Country">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                    </div>
+                    <div class="please font-weight-bold">
+                        * PLEASE COMPLETE ALL FIEDS CORRECTLY *
+                    </div>
+                    <button type="submit" class="btn btn-warning">Enviar mensaje</button>
+                </form>
+        </div>
+        <div class="col-1">
+        </div>
+    </div>
+</div>
+</div>
+
+
