Fixed final footer and rename title of page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -136,7 +136,7 @@
                                 entusiastas que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios hemos
                                 diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica y Asia. Nuestro objetivo
                                 ahora es ir ampliando nuevos horizontes poco a poco.</p>
-                            <a href="#" class="btn btn-primary btn-lg">Descubrir</a>
+                            <a href="#" class="btn btn-primary btn-lg" id="btnD">Descubrir</a>
                         </div>
                     </div>
                 </div>
