--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid footerBox">
-    <div class="row">
+    <div class="row first-row">
         <div class="col-2"></div>
         <div class="col-4">
             <div class="column columText">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-    <div class="row finalFoot">
+    <div class="row finalFoot align-items-center">
         <div class="col-2"></div>
         <div class="col-8 d-flex justify-content-center">Geekhubs Travels 2018 Todos los derechos reservados</div>
         <div class="col-2"></div>
