Hide map div when mobile devices

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -145,7 +145,7 @@
     </div>
 </div>
 
-<div class="container-fluid map">
+<div class="container-fluid map" id="mapId">
     <div class="row">
         <div class="col-2">
         </div>
