--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,7 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='components/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='dist/css/style.min.css'/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     {{> header }}
