--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12 image">
+    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 image">
       
       <div class="row">
         <div class="col-3">
