Added responsive to map, footer, and added carousel

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,8 @@
-<div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="images/madrid.JPG" alt="Card image cap" width="200px">
-    <div class="card-img-overlay">
+<div class="d-none d-lg-block">
+    <div class="card-deck">
+        <div class="card">
+            <img class="card-img-top" src="images/madrid.JPG" alt="Card image cap" width="200px">
+        <div class="card-img-overlay">
         <div class="row">
             <div class="col-8">
                 <div id="textIdBlue">
@@ -123,9 +124,142 @@
         </div>
     </div>
 </div>
+</div>
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid d-none d-sm-block d-lg-none">
+    <div class="row justify-content-center">
+    <div="col-12 d-none d-sm-block d-lg-none">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-8 ">
+                            <div id="textIdBlueCa">
+                                <div class="textBlueCa">Save 90$ to pay only</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div id="textIdYellowCa">
+                                <div class="textYellowCa font-weight-bold">359$</div>
+                            </div>
+                        </div>
+                    </div>
+                     <img class="imgCar d-block w-100" src="images/madrid.JPG" alt="First slide">
+                     <div class="carousel-caption d-none d-md-block d-sm-block">
+                        <h3>Madrid</h3>
+                    </div>
+                </div>
+                
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-8">
+                            <div id="textIdBlueCa">
+                                <div class="textBlueCa">Save 75$ to pay only</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div id="textIdYellowCa">
+                                <div class="textYellowCa font-weight-bold">729$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="imgCar d-block w-100" src="images/new_york.JPG" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block d-sm-block">
+                        <h3>New York</h3>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-8">
+                            <div id="textIdBlueCa">
+                                <div class="textBlueCa">Save 35$ to pay only</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div id="textIdYellowCa">
+                                <div class="textYellowCa font-weight-bold">519$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="imgCar d-block w-100" src="images/tokyo.JPG" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block d-sm-block">
+                        <h3>Tokyo</h3>
+                    </div>
+                </div>
+                
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-8">
+                            <div id="textIdBlueCa">
+                                <div class="textBlueCa">Save 65$ to pay only</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div id="textIdYellowCa">
+                                <div class="textYellowCa font-weight-bold">329$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="imgCar d-block w-100" src="images/ciudad_mexico.JPG" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block d-sm-block">
+                        <h3>Ciudad de Mexico</h3>
+                    </div>
+                </div>
+                
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-8">
+                            <div id="textIdBlueCa">
+                                <div class="textBlueCa">Save 95$ to pay only</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div id="textIdYellowCa">
+                                <div class="textYellowCa font-weight-bold">119$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="imgCar d-block w-100" src="images/buenos_aires.JPG" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block d-sm-block">
+                        <h3>Buenos Aires</h3>
+                    </div>
+                </div>
+                
+                <div class="carousel-item">>
+                    <div class="row">
+                        <div class="col-8">
+                            <div id="textIdBlueCa">
+                                <div class="textBlueCa">Save 50$ to pay only</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div id="textIdYellowCa">
+                                <div class="textYellowCa font-weight-bold">659$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="imgCar d-block w-100" src="images/beijing.JPG" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block d-sm-block">
+                        <h3>Beijing</h3>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</div>
+</div>
+
+<div class="container-fluid d-none d-sm-none d-lg-block">
+    <div class="row aling-items-center">
         <div class="col-12 imageWho">
             <div class="row">
                 <div class="col-1 offset-6">
@@ -142,10 +276,29 @@
                 </div>
             </div>
         </div>
+    </div> 
+</div>
+
+ <div class="QSBox container-fluid d-none d-sm-block d-lg-none">
+    <div class="row aling-items-center" style="min-height: 480px;">
+        <div class="col-3"></div>
+            <div class="col-6">
+                <div class="quienesSomos card" style="width: 25rem;">
+                    <div class="card-body">
+                        <h5 class="titleQS card-title">QUIENES SOMOS</h5>
+                        <p class="textQS card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros 
+                            entusiastas que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios hemos
+                            diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica y Asia. Nuestro objetivo
+                            ahora es ir ampliando nuevos horizontes poco a poco.</p>
+                        <a href="#" class="btn btn-primary btn-lg" id="btnD">Descubrir</a>
+                    </div>
+                </div>
+            </div>
+        <div class="col-3"></div>
     </div>
 </div>
 
-<div class="container-fluid map" id="mapId">
+<div class="container-fluid map d-none d-lg-block" id="mapId">
     <div class="row">
         <div class="col-2">
         </div>
