--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid footerBox">
+<div class="container-fluid footerBox d-none d-sm-none d-lg-block">
     <div class="row first-row">
         <div class="col-2"></div>
         <div class="col-4">
@@ -61,6 +61,72 @@
         <div class="col-8 d-flex justify-content-center">Geekhubs Travels 2018 Todos los derechos reservados</div>
         <div class="col-2"></div>
     </div>
-    
+</div>
+
+<div class="container-fluid footerBoxRe d-none d-sm-block d-lg-none">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-9">
+            <div class="column columText">
+                <div class="textFoot">
+                    ¿NECESITAS AYUDA?
+                </div>
+                <div class="textFoot">
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-11">0264 123 4567</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-11">enquiry@geekshubstravels.com</div>
+                    </div>
+                </div>
+                <div class="textFoot" id="horary">
+                    Lun-Vier. 9:30-19:00 Sab:10:00-14:00
+                </div>
+            </div>
+            <div class="column columText">
+                <div class="textFoot">
+                    SUBSCRÍBETE A LA NEWSLETTER
+                </div>
+
+                <form class="formFooter">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <input type="email" class="form-control" id="inputPassword4" placeholder="Correo electrónico">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-warning">SUBSCRÍBETE</button>
+                </form>
+            </div>
+            <div class="column">
+                <div class="row justify-content-center logosFoot">
+                    <div class="col-10">
+                        <a href="#">
+                            <img src="/images/fb-ico.png" id="iconFB">
+                        </a>
+                        <a href="#">
+                            <img src="/images/tt-ico.png" id="iconTW">
+                        </a>
+                        <a href="#">
+                            <img src="/images/ws-ico.png"  id="iconWS">
+                        </a>
+                        <a href="#">
+                            <img src="/images/in-ico.png"  id="iconIN">
+                        </a>
+                        <a href="#">
+                            <img src="/images/ln-ico.png"  id="iconLN">
+                        </a>
+                        <a href="#">
+                            <img src="/images/yo-ico.png"  id="iconYO">
+                        </a>
+                    </div>
+                <div class="col-2"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
