Fixed header navbar and added card-name to carousel

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -144,9 +144,9 @@
                             </div>
                         </div>
                     </div>
-                     <img class="imgCar d-block w-100" src="images/madrid.JPG" alt="First slide">
-                     <div class="carousel-caption d-none d-md-block d-sm-block">
-                        <h3>Madrid</h3>
+                    <img class="imgCar d-block w-100" src="images/madrid.JPG" alt="First slide">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Madrid</h5>
                     </div>
                 </div>
                 
@@ -164,8 +164,8 @@
                         </div>
                     </div>
                     <img class="imgCar d-block w-100" src="images/new_york.JPG" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block d-sm-block">
-                        <h3>New York</h3>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">New York</h5>
                     </div>
                 </div>
 
@@ -183,8 +183,8 @@
                         </div>
                     </div>
                     <img class="imgCar d-block w-100" src="images/tokyo.JPG" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block d-sm-block">
-                        <h3>Tokyo</h3>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Tokyo</h5>
                     </div>
                 </div>
                 
@@ -202,8 +202,8 @@
                         </div>
                     </div>
                     <img class="imgCar d-block w-100" src="images/ciudad_mexico.JPG" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block d-sm-block">
-                        <h3>Ciudad de Mexico</h3>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Ciudad de Mexico</h5>
                     </div>
                 </div>
                 
@@ -221,8 +221,8 @@
                         </div>
                     </div>
                     <img class="imgCar d-block w-100" src="images/buenos_aires.JPG" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block d-sm-block">
-                        <h3>Buenos Aires</h3>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Buenos Aires</h5>
                     </div>
                 </div>
                 
@@ -240,8 +240,8 @@
                         </div>
                     </div>
                     <img class="imgCar d-block w-100" src="images/beijing.JPG" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block d-sm-block">
-                        <h3>Beijing</h3>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Beijing</h5>
                     </div>
                 </div>
             </div>
