--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 image">
-
+      
       <div class="row">
         <div class="col-3 d-none d-lg-block">
           <img src="/images/iconoweb.png" id="puente" class="img-fluid" width="150px">
-          <div>GeekHubs</div>
-          <div>Travels</div>
+            <div>GeekHubs</div>
+            <div>Travels</div>
         </div>
 
         <div class="col-6 d-none d-lg-block">
@@ -16,7 +16,7 @@
             <a class="nav-link font-italic" href="#"> Donde estamos</a>
           </nav>
         </div>
-
+      
         <div class="col-3 d-none d-lg-block">
           <div class="row justify-content-end">
             <div class="col-3"></div>
@@ -42,62 +42,56 @@
             </div>
           </div>
         </div>
-      </div>
+    </div>
 
-      <div class="row d-none d-sm-block d-lg-none d-block d-xs-block d-md-block align-items-center">
-        <nav class="navbar navbar-expand-auto navbar-dark bg-dark fixed-top">
-          <img class="icon image-fluid logoWeb" src="/images/iconoweb.png" alt="icono web">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarTogglerDemo01"
-            aria-expanded="false" aria-label="Toggle navigation">
+    <div class="row">
+      <div class="col-12">
+        <nav class="navbar navbar-light bg-dark justify-content-end">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarHeader">
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active justify-content-center">
-                <a class="nav-link font-italic" href="#destination">Destinos</a>
+                <a class="nav-link font-italic" href="#">Destinos</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link font-italic" href="#explication">Quiénes somos</a>
+                <a class="nav-link font-italic" href="#">Quienes somos</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link font-italic" href="#footerId">Donde estamos</a>
+                <a class="nav-link font-italic" href="#">Donde estamos</a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
-
-      <div class="row">
-        <div class="col-3">
-        </div>
-        <div class="col-6 d-flex justify-content-start">
-          <div class="d-none d-sm-block d-lg-none d-block d-xs-block d-md-block">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+    </div>
+    
+        <div class="row">
+          <div class="col-3">
+          </div>
+          <div class="col-6 d-flex justify-content-start">
             <h1>Viaja!</h1>
           </div>
-          <h1>Viaja!</h1>
+          <div class="col-3">
+          </div>
         </div>
-        <div class="col-3">
+        <div class="row">
+          <div class="col-3">
+          </div>
+          <div class="col-6 d-flex justify-content-start">
+            <h2>Descubre lugares maravillosos!</h2>
+          </div>
+          <div class="col-3">
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-3">
-        </div>
-        <div class="col-6 d-flex justify-content-start">
-          <h2>Descubre lugares maravillosos!</h2>
-        </div>
-        <div class="col-3">
-        </div>
-      </div>
 
-      <div class="wrapperBtn">
-        <button type="button" class="btn btn-warning btn-lg">ver destinos</button>
-      </div>
+        <div class="wrapperBtn">
+          <button type="button" class="btn btn-warning btn-lg">ver destinos</button>
+        </div>
 
     </div>
   </div>
 </div>
+
+
