Added regiter view

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -95,7 +95,7 @@
                 <form class="formFooter">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="email" class="form-control" id="inputPassword4" placeholder="Correo electrónico">
+                            <input type="email" class="form-control" placeholder="Correo electrónico">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-warning">SUBSCRÍBETE</button>
