--- a/views/index.hbs
+++ b/views/index.hbs
@@ -330,18 +330,18 @@
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="inputEmail4" placeholder="Name*">
+                            <input type="text" class="form-control" placeholder="Name*">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="email" class="form-control" id="inputPassword4" placeholder="Email*">
+                            <input type="email" class="form-control" placeholder="Email*">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="inputEmail4" placeholder="Phone">
+                            <input type="text" class="form-control" placeholder="Phone">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="inputPassword4" placeholder="Country">
+                            <input type="text" class="form-control" placeholder="Country">
                         </div>
                     </div>
                     <div class="form-group">
