Connect page with database

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<div class="d-none d-lg-block">
+<div class="d-none d-lg-block" id="destinosNormal">
     <div class="card-deck">
         <div class="card">
             <img class="card-img-top" src="images/madrid.JPG" alt="Card image cap" width="200px">
@@ -126,7 +126,7 @@
 </div>
 </div>
 
-<div class="container-fluid d-none d-sm-block d-lg-none">
+<div class="container-fluid d-none d-sm-block d-lg-none" id="destinosResponsive">
     <div class="row justify-content-center">
     <div="col-12 d-none d-sm-block d-lg-none">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -258,7 +258,7 @@
 </div>
 </div>
 
-<div class="container-fluid d-none d-sm-none d-lg-block">
+<div class="container-fluid d-none d-sm-none d-lg-block" id="quienNormal">
     <div class="row aling-items-center">
         <div class="col-12 imageWho">
             <div class="row">
@@ -279,7 +279,7 @@
     </div> 
 </div>
 
- <div class="QSBox container-fluid d-none d-sm-block d-lg-none">
+ <div class="QSBox container-fluid d-none d-sm-block d-lg-none" id="quienResponsive">
     <div class="row aling-items-center" style="min-height: 480px;">
         <div class="col-3"></div>
             <div class="col-6">
