--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -11,9 +11,11 @@
 
         <div class="col-6 d-none d-lg-block">
           <nav class="nav justify-content-center">
-            <a class="nav-link font-italic" href="#">Destinos </a>
-            <a class="nav-link font-italic" href="#"> Quienes somos</a>
-            <a class="nav-link font-italic" href="#"> Donde estamos</a>
+            <a class="nav-link font-italic" href="/#destinosNormal">Destinos </a>
+            <a class="nav-link font-italic" href="/#quienNormal"> Quienes somos</a>
+            <a class="nav-link font-italic" href="/#mapId"> Donde estamos</a>
+            <a class="nav-link font-italic" href="register"> Registro</a>
+            <a class="nav-link font-italic" href="login"> Login</a>
           </nav>
         </div>
 
@@ -54,13 +56,16 @@
           <div class="collapse navbar-collapse" id="navbarHeader">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active justify-content-center">
-                <a class="nav-link font-italic" href="#destination">Destinos</a>
+                <a class="nav-link font-italic" href="/#destinosResponsive">Destinos</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link font-italic" href="#explication">Quiénes somos</a>
+                <a class="nav-link font-italic" href="/#quienResponsive">Quiénes somos</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link font-italic" href="#footerId">Donde estamos</a>
+                <a class="nav-link font-italic" href="register">Registro</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link font-italic" href="login">Login</a>
               </li>
             </ul>
           </div>
