Created login conexion with DB and make response

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,20 +4,21 @@
             <div class="row loginBox d-flex align-items-center">
                 <div class="offset-2 col-8 ">
                     <h3 id="titR">LOGIN</h3>
-                    <form>
+                    <form method="post">
                         <div class="form-row">
-                            <input type="text" class="form-control rInput" placeholder="Usuario o email">
+                            <input type="text" class="form-control rInput" name="user" placeholder="Usuario o email">
                         </div>
                         <div class="form-row">
-                            <input type="password" class="form-control rInput" placeholder="Contraseña">
+                            <input type="password" class="form-control rInput" name="passW" placeholder="Contraseña">
                         </div>
-                    </form>
+                    
                     <br>
                     <div class="form-check">
                         <button type="submit" class="btn-lg btn-warning">Enviar</button>
                     </div>
                     <br>
                     <a href="#" class="loginEnlace">¿No recuerdas tu contraseña?</a>
+                    </form>
                 </div>
             </div>
         </div>
