--- a/views/newPass.hbs
+++ b/views/newPass.hbs
@@ -1,1 +1,34 @@
-<p>Nueva Password</p>
+<div class="container-fluid">
+    <div class="row aling-items-center">
+        <div class="col-12">
+            <div class="row d-flex justify-content-center">
+                <div class="col-3"></div>
+                <div class="col-6 d-flex justify-content-center">
+                    <div class="newPBox">
+                        <form class="needs-validation" method="post" novalidate>
+                            <h3 style="color:black" class="text-center">Introduce tu nueva contraseña</h3>
+                            <div class="form-row">
+                                <input type="password" id="newPassword" class="form-control rInput" name="nPassW" placeholder="Contraseña" required>
+                                <div class="invalid-feedback adviceR">
+                                    Por favor, introduce una contraseña
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <input type="password" id="confirmNewPassword" class="form-control rInput" name="repeatNewPassW" placeholder="Repite la contraseña"
+                                    required>
+                                <div class="invalid-feedback adviceR" id="advicePassDiferent">
+                                    Por favor, escribe la misma contraseña
+                                </div>
+                            </div>
+
+                            <div class="form-check">
+                                <button type="submit" class="btn-lg btn-warning">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-3"></div>
+            </div>
+        </div>
+    </div>
+</div>
