--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,26 +1,32 @@
+{{#each travels}}
 <div class="d-none d-lg-block" id="destinosNormal">
     <div class="card-deck">
         <div class="card">
-            <img class="card-img-top" src="images/madrid.JPG" alt="Card image cap" width="200px">
-        <div class="card-img-overlay">
-        <div class="row">
-            <div class="col-8">
-                <div id="textIdBlue">
-                    <div class="textBlue">Save 90$ to pay only</div>
+            <img class="card-img-top" src="images/{{travel}}.JPG" alt="Card image cap" width="200px">
+            <div class="card-img-overlay">
+                <div class="row">
+                    <div class="col-8">
+                        <div id="textIdBlue">
+                            <div class="textBlue">Save {{saveMoney}}$ to pay only</div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div id="textIdYellow">
+                            <div class="textYellow font-weight-bold">{{price}}€</div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-4">
-                <div id="textIdYellow">
-                    <div class="textYellow font-weight-bold">359$</div>
-                </div>
+
+            <div class="card-body text-center">
+                <h5 class="card-title">{{travel}}</h5>
             </div>
+
         </div>
     </div>
-    <div class="card-body text-center">
-      <h5 class="card-title">Madrid</h5>
-    </div>
-  </div>
-  <div class="card">
+</div>
+{{/each}}
+<!--div class="card">
     <img class="card-img-top" src="images/new_york.JPG" alt="Card image cap" width="180px">
     <div class="card-img-overlay">
         <div class="row">
@@ -124,139 +130,142 @@
         </div>
     </div>
 </div>
-</div>
-
+</div-->
+                    
 <div class="container-fluid d-none d-sm-block d-lg-none" id="destinosResponsive">
     <div class="row justify-content-center">
-    <div="col-12 d-none d-sm-block d-lg-none">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="row">
-                        <div class="col-8 ">
-                            <div id="textIdBlueCa">
-                                <div class="textBlueCa">Save 90$ to pay only</div>
+        <div="col-12 d-none d-sm-block d-lg-none">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    {{#each travels}}
+                    <div class="carousel-item active d-none d-sm-block d-lg-none">
+                        <div class="row">
+                            <div class="col-8 ">
+                                <div id="textIdBlueCa">
+                                    <div class="textBlueCa">Save {{saveMoney}}$ to pay only</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div id="textIdYellowCa">
+                                    <div class="textYellowCa font-weight-bold">{{price}}$</div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-4">
-                            <div id="textIdYellowCa">
-                                <div class="textYellowCa font-weight-bold">359$</div>
-                            </div>
+                        <img class="imgCar d-block w-100" src="images/{{travel}}.JPG" alt="First slide">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">{{travel}}</h5>
                         </div>
-                    </div>
-                    <img class="imgCar d-block w-100" src="images/madrid.JPG" alt="First slide">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Madrid</h5>
-                    </div>
-                </div>
-                
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div id="textIdBlueCa">
-                                <div class="textBlueCa">Save 75$ to pay only</div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div id="textIdYellowCa">
-                                <div class="textYellowCa font-weight-bold">729$</div>
-                            </div>
-                        </div>
-                    </div>
-                    <img class="imgCar d-block w-100" src="images/new_york.JPG" alt="Second slide">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">New York</h5>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div id="textIdBlueCa">
-                                <div class="textBlueCa">Save 35$ to pay only</div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div id="textIdYellowCa">
-                                <div class="textYellowCa font-weight-bold">519$</div>
-                            </div>
-                        </div>
-                    </div>
-                    <img class="imgCar d-block w-100" src="images/tokyo.JPG" alt="Third slide">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Tokyo</h5>
-                    </div>
-                </div>
-                
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div id="textIdBlueCa">
-                                <div class="textBlueCa">Save 65$ to pay only</div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div id="textIdYellowCa">
-                                <div class="textYellowCa font-weight-bold">329$</div>
-                            </div>
-                        </div>
-                    </div>
-                    <img class="imgCar d-block w-100" src="images/ciudad_mexico.JPG" alt="Third slide">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Ciudad de Mexico</h5>
-                    </div>
-                </div>
-                
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div id="textIdBlueCa">
-                                <div class="textBlueCa">Save 95$ to pay only</div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div id="textIdYellowCa">
-                                <div class="textYellowCa font-weight-bold">119$</div>
-                            </div>
-                        </div>
-                    </div>
-                    <img class="imgCar d-block w-100" src="images/buenos_aires.JPG" alt="Third slide">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Buenos Aires</h5>
-                    </div>
-                </div>
-                
-                <div class="carousel-item">>
-                    <div class="row">
-                        <div class="col-8">
-                            <div id="textIdBlueCa">
-                                <div class="textBlueCa">Save 50$ to pay only</div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div id="textIdYellowCa">
-                                <div class="textYellowCa font-weight-bold">659$</div>
-                            </div>
-                        </div>
-                    </div>
-                    <img class="imgCar d-block w-100" src="images/beijing.JPG" alt="Third slide">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Beijing</h5>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+    </div>
+   {{!--
+    <div class="carousel-item">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlueCa">
+                    <div class="textBlueCa">Save 75$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellowCa">
+                    <div class="textYellowCa font-weight-bold">729$</div>
+                </div>
+            </div>
+        </div>
+        <img class="imgCar d-block w-100" src="images/NewYork.JPG" alt="Second slide">
+        <div class="card-body text-center">
+            <h5 class="card-title">New York</h5>
         </div>
     </div>
+
+    <div class="carousel-item">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlueCa">
+                    <div class="textBlueCa">Save 35$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellowCa">
+                    <div class="textYellowCa font-weight-bold">519$</div>
+                </div>
+            </div>
+        </div>
+        <img class="imgCar d-block w-100" src="images/Tokyo.JPG" alt="Third slide">
+        <div class="card-body text-center">
+            <h5 class="card-title">Tokyo</h5>
+        </div>
+    </div>
+
+    <div class="carousel-item">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlueCa">
+                    <div class="textBlueCa">Save 65$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellowCa">
+                    <div class="textYellowCa font-weight-bold">329$</div>
+                </div>
+            </div>
+        </div>
+        <img class="imgCar d-block w-100" src="images/CiudadDeMexico.JPG" alt="Third slide">
+        <div class="card-body text-center">
+            <h5 class="card-title">Ciudad de Mexico</h5>
+        </div>
+    </div>
+
+    <div class="carousel-item">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlueCa">
+                    <div class="textBlueCa">Save 95$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellowCa">
+                    <div class="textYellowCa font-weight-bold">119$</div>
+                </div>
+            </div>
+        </div>
+        <img class="imgCar d-block w-100" src="images/BuenosAires.JPG" alt="Third slide">
+        <div class="card-body text-center">
+            <h5 class="card-title">Buenos Aires</h5>
+        </div>
+    </div>
+
+    <div class="carousel-item">>
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlueCa">
+                    <div class="textBlueCa">Save 50$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellowCa">
+                    <div class="textYellowCa font-weight-bold">659$</div>
+                </div>
+            </div>
+        </div>
+        <img class="imgCar d-block w-100" src="images/Beijing.JPG" alt="Third slide">
+        <div class="card-body text-center">
+            <h5 class="card-title">Beijing</h5>
+        </div>
+    </div>
+</div> --}}
+<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+</a>
 </div>
-</div>
+  {{/each}}
+
 
 <div class="container-fluid d-none d-sm-none d-lg-block" id="quienNormal">
     <div class="row aling-items-center">
@@ -266,34 +275,34 @@
                     <div class="quienesSomos card" style="width: 25rem;">
                         <div class="card-body">
                             <h5 class="titleQS card-title">QUIENES SOMOS</h5>
-                            <p class="textQS card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros 
-                                entusiastas que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios hemos
-                                diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica y Asia. Nuestro objetivo
-                                ahora es ir ampliando nuevos horizontes poco a poco.</p>
+                            <p class="textQS card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros entusiastas
+                                que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios
+                                hemos diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica
+                                y Asia. Nuestro objetivo ahora es ir ampliando nuevos horizontes poco a poco.</p>
                             <a href="#" class="btn btn-primary btn-lg" id="btnD">Descubrir</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 </div>
 
- <div class="QSBox container-fluid d-none d-sm-block d-lg-none" id="quienResponsive">
+<div class="QSBox container-fluid d-none d-sm-block d-lg-none" id="quienResponsive">
     <div class="row aling-items-center" style="min-height: 480px;">
         <div class="col-3"></div>
-            <div class="col-6">
-                <div class="quienesSomos card" style="width: 25rem;">
-                    <div class="card-body">
-                        <h5 class="titleQS card-title">QUIENES SOMOS</h5>
-                        <p class="textQS card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros 
-                            entusiastas que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios hemos
-                            diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica y Asia. Nuestro objetivo
-                            ahora es ir ampliando nuevos horizontes poco a poco.</p>
-                        <a href="#" class="btn btn-primary btn-lg" id="btnD">Descubrir</a>
-                    </div>
+        <div class="col-6">
+            <div class="quienesSomos card" style="width: 25rem;">
+                <div class="card-body">
+                    <h5 class="titleQS card-title">QUIENES SOMOS</h5>
+                    <p class="textQS card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros entusiastas
+                        que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios hemos
+                        diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica y Asia. Nuestro
+                        objetivo ahora es ir ampliando nuevos horizontes poco a poco.</p>
+                    <a href="#" class="btn btn-primary btn-lg" id="btnD">Descubrir</a>
                 </div>
             </div>
+        </div>
         <div class="col-3"></div>
     </div>
 </div>
@@ -304,7 +313,8 @@
         </div>
         <div class="col-4">
             <div id="mapGoogle">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.4502350400226!2d-0.3581286847340404!3d39.48174697948473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604898947abad3%3A0x5aae0e0b7fa0358a!2sGeeksHubs+Space+Valencia!5e0!3m2!1ses!2ses!4v1527775812312" width="350" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.4502350400226!2d-0.3581286847340404!3d39.48174697948473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604898947abad3%3A0x5aae0e0b7fa0358a!2sGeeksHubs+Space+Valencia!5e0!3m2!1ses!2ses!4v1527775812312"
+                    width="350" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="col-1">
@@ -316,11 +326,10 @@
                     <div>P: 0264 123 4567</div>
                 </div>
                 <div class="textDB">
-                    <div>Give us a call or drop by anytime, we endeavour to
-                    answer all enquires within 24 hours on business days.
+                    <div>Give us a call or drop by anytime, we endeavour to answer all enquires within 24 hours on business days.
+                    </div>
                 </div>
-                </div>
-                
+
                 <div class="textDB">
                     <div>We are open from 8:30 AM - 4:00 PM week days.</div>
                 </div>
@@ -352,11 +361,9 @@
                     </div>
                     <button type="submit" class="btn btn-warning">Enviar mensaje</button>
                 </form>
-        </div>
-        <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
         </div>
     </div>
 </div>
-</div>
-
-
